service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  selector:
    app: web
  ports:
    - port: 5200
      targetPort: 5000
      nodePort: 30080
  type: NodePort
