http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harsh-http-route
  namespace: harsh-ns
spec:
  parentRefs:
    - name: 
  rules:
    - matches: 
        - path:
            type: PathPrefix
            value: /api/web
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              ReplacePrefixMatch: /web
      backendRefs:
        - name: ghee-service
          port: 5656
